gen/antlr/HTMLParser.java
// Generated from C:/Users/ASUS/IdeaProjects/compiler project 2/src/antlr/HTMLParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class HTMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NG_FOR=1, NG_IF=2, INTERPOLATION=3, DOUBLE_CURLY_OPEN=4, DOUBLE_CURLY_CLOSE=5, 
		HTML_ELEMENT=6, CSS_PROPERTY=7, COMPONENT=8, SELECTOR=9, TEMPLATE_URL=10, 
		TEMPLATE=11, STYLE_URLS=12, STYLES=13, STANDALONE=14, INJECTABLE=15, ROOT=16, 
		PLATFORM=17, PROVIDED_IN=18, HTML_OPEN_TAG=19, HTML_CLOSE_TAG=20, STYLE_OPEN_TAG=21, 
		CONSOL=22, LOG=23, STYLE_CLOSE_TAG=24, FUNCTION=25, CLASS=26, NEW=27, 
		NUMBER=28, STRING=29, BOOLEAN=30, ARRAY=31, ENUM=32, ANY=33, VOID=34, 
		LET=35, TRUE=36, FALSE=37, AS=38, RETURN=39, INTERFACE=40, THIS=41, CONSTRUCTOR=42, 
		EXTENDS=43, SUPER=44, PUBLIC=45, PRIVATE=46, PROTECTED=47, CONST=48, EXPORT=49, 
		IMPORT=50, IMPORTS=51, FROM=52, SHOW=53, THROW=54, EMIT=55, DECORATOR=56, 
		DASH=57, UNDERSCORE=58, COLON=59, SEMICOLON=60, COMMA=61, LBRACKET=62, 
		RBRACKET=63, LBRACE=64, RBRACE=65, LPAREN=66, RPAREN=67, ASSIGN=68, QUOTE=69, 
		BACKTICK=70, SINGLE_QUOTE=71, OPEN_TAG=72, CLOUSE_TAG=73, ARROW=74, DOT=75, 
		PLUS=76, TAG_OPEN_SLASH=77, HASH=78, SDOLAR=79, SLASH=80, FOR_LOOP=81, 
		STRING_CONTENT=82, VALUE=83, NUMBER_WITH_UNIT=84, KEYWORD=85, IDENTIFIER=86, 
		COLOR_CODE=87, WHITESPACE=88, SINGLE_LINE_COMMENT=89, MULTI_LINE_COMMENT=90, 
		COMMENT=91;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_declaration = 2, RULE_componentDeclaration = 3, 
		RULE_componentBody = 4, RULE_serviceDeclaration = 5, RULE_htmlProgram = 6, 
		RULE_htmlElement = 7, RULE_htmlContent = 8, RULE_attribute = 9, RULE_cssProgram = 10, 
		RULE_cssRule = 11, RULE_cssProperty = 12, RULE_selector = 13, RULE_importModelDeclaration = 14, 
		RULE_exportModelDeclaration = 15, RULE_variableDeclaration = 16, RULE_decorator = 17, 
		RULE_typeAssertion = 18, RULE_enumDeclaration = 19, RULE_enumeratorList = 20, 
		RULE_enumValue = 21, RULE_classDeclaration = 22, RULE_objectClass = 23, 
		RULE_interfaceDeclaration = 24, RULE_objectInterface = 25, RULE_objectInterfaceBody = 26, 
		RULE_functionDeclaration = 27, RULE_parameterList = 28, RULE_callFunctios = 29, 
		RULE_consolDeclaration = 30, RULE_returnStatement = 31, RULE_throwStatement = 32, 
		RULE_expressionStatement = 33, RULE_expression = 34, RULE_block = 35, 
		RULE_thisStatement = 36, RULE_emitStatement = 37, RULE_objectLiteral = 38, 
		RULE_objectProperty = 39, RULE_arrayLiteral = 40, RULE_mapLiteral = 41, 
		RULE_tupleLiteral = 42, RULE_ngDirective = 43, RULE_type = 44, RULE_assignment = 45, 
		RULE_any_type = 46, RULE_product = 47, RULE_objectCreation = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "declaration", "componentDeclaration", "componentBody", 
			"serviceDeclaration", "htmlProgram", "htmlElement", "htmlContent", "attribute", 
			"cssProgram", "cssRule", "cssProperty", "selector", "importModelDeclaration", 
			"exportModelDeclaration", "variableDeclaration", "decorator", "typeAssertion", 
			"enumDeclaration", "enumeratorList", "enumValue", "classDeclaration", 
			"objectClass", "interfaceDeclaration", "objectInterface", "objectInterfaceBody", 
			"functionDeclaration", "parameterList", "callFunctios", "consolDeclaration", 
			"returnStatement", "throwStatement", "expressionStatement", "expression", 
			"block", "thisStatement", "emitStatement", "objectLiteral", "objectProperty", 
			"arrayLiteral", "mapLiteral", "tupleLiteral", "ngDirective", "type", 
			"assignment", "any_type", "product", "objectCreation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'*ngFor'", "'*ngIf'", null, "'{{'", "'}}'", null, null, "'Component'", 
			"'selector'", "'templateUrl'", "'template'", "'styleUrls'", "'styles'", 
			"'standalone'", "'Injectable'", "'root'", "'platform'", "'providedIn'", 
			"'<html>'", "'</html>'", "'<style>'", "'console'", "'log'", "'</style>'", 
			"'function'", "'class'", "'new'", "'number'", "'string'", "'boolean'", 
			"'Array'", "'enum'", "'any'", "'void'", null, "'true'", "'false'", "'as'", 
			"'return'", "'interface'", "'this'", "'constructor'", "'extends'", "'super'", 
			"'public'", "'private'", "'protected'", "'const'", "'export'", "'import'", 
			"'imports'", "'from'", "'show'", "'throw'", "'emit'", "'@'", "'-'", "'_'", 
			"':'", "';'", "','", "'['", "']'", "'{'", "'}'", "'('", "')'", "'='", 
			"'\"'", "'`'", "'''", "'<'", "'>'", "'=>'", "'.'", "'+'", "'</'", "'#'", 
			"'$'", "'/'", "'for'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NG_FOR", "NG_IF", "INTERPOLATION", "DOUBLE_CURLY_OPEN", "DOUBLE_CURLY_CLOSE", 
			"HTML_ELEMENT", "CSS_PROPERTY", "COMPONENT", "SELECTOR", "TEMPLATE_URL", 
			"TEMPLATE", "STYLE_URLS", "STYLES", "STANDALONE", "INJECTABLE", "ROOT", 
			"PLATFORM", "PROVIDED_IN", "HTML_OPEN_TAG", "HTML_CLOSE_TAG", "STYLE_OPEN_TAG", 
			"CONSOL", "LOG", "STYLE_CLOSE_TAG", "FUNCTION", "CLASS", "NEW", "NUMBER", 
			"STRING", "BOOLEAN", "ARRAY", "ENUM", "ANY", "VOID", "LET", "TRUE", "FALSE", 
			"AS", "RETURN", "INTERFACE", "THIS", "CONSTRUCTOR", "EXTENDS", "SUPER", 
			"PUBLIC", "PRIVATE", "PROTECTED", "CONST", "EXPORT", "IMPORT", "IMPORTS", 
			"FROM", "SHOW", "THROW", "EMIT", "DECORATOR", "DASH", "UNDERSCORE", "COLON", 
			"SEMICOLON", "COMMA", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "LPAREN", 
			"RPAREN", "ASSIGN", "QUOTE", "BACKTICK", "SINGLE_QUOTE", "OPEN_TAG", 
			"CLOUSE_TAG", "ARROW", "DOT", "PLUS", "TAG_OPEN_SLASH", "HASH", "SDOLAR", 
			"SLASH", "FOR_LOOP", "STRING_CONTENT", "VALUE", "NUMBER_WITH_UNIT", "KEYWORD", 
			"IDENTIFIER", "COLOR_CODE", "WHITESPACE", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HTMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(98);
				statement();
				}
				}
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 92292701200318464L) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & 312465L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public HtmlProgramContext htmlProgram() {
			return getRuleContext(HtmlProgramContext.class,0);
		}
		public CssProgramContext cssProgram() {
			return getRuleContext(CssProgramContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ImportModelDeclarationContext importModelDeclaration() {
			return getRuleContext(ImportModelDeclarationContext.class,0);
		}
		public ExportModelDeclarationContext exportModelDeclaration() {
			return getRuleContext(ExportModelDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public ObjectCreationContext objectCreation() {
			return getRuleContext(ObjectCreationContext.class,0);
		}
		public EnumDeclarationContext enumDeclaration() {
			return getRuleContext(EnumDeclarationContext.class,0);
		}
		public ConsolDeclarationContext consolDeclaration() {
			return getRuleContext(ConsolDeclarationContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public ThrowStatementContext throwStatement() {
			return getRuleContext(ThrowStatementContext.class,0);
		}
		public ObjectClassContext objectClass() {
			return getRuleContext(ObjectClassContext.class,0);
		}
		public ObjectInterfaceContext objectInterface() {
			return getRuleContext(ObjectInterfaceContext.class,0);
		}
		public CallFunctiosContext callFunctios() {
			return getRuleContext(CallFunctiosContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public EmitStatementContext emitStatement() {
			return getRuleContext(EmitStatementContext.class,0);
		}
		public ThisStatementContext thisStatement() {
			return getRuleContext(ThisStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				htmlProgram();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				cssProgram();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(106);
				variableDeclaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(107);
				importModelDeclaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(108);
				exportModelDeclaration();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(109);
				functionDeclaration();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(110);
				classDeclaration();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(111);
				interfaceDeclaration();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(112);
				objectCreation();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(113);
				enumDeclaration();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(114);
				consolDeclaration();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(115);
				expressionStatement();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(116);
				returnStatement();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(117);
				throwStatement();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(118);
				objectClass();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(119);
				objectInterface();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(120);
				callFunctios();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(121);
				assignment();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(122);
				emitStatement();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(123);
				thisStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public ServiceDeclarationContext serviceDeclaration() {
			return getRuleContext(ServiceDeclarationContext.class,0);
		}
		public ComponentDeclarationContext componentDeclaration() {
			return getRuleContext(ComponentDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				serviceDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				componentDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentDeclarationContext extends ParserRuleContext {
		public TerminalNode DECORATOR() { return getToken(HTMLParser.DECORATOR, 0); }
		public TerminalNode COMPONENT() { return getToken(HTMLParser.COMPONENT, 0); }
		public TerminalNode LPAREN() { return getToken(HTMLParser.LPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(HTMLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(HTMLParser.RBRACE, 0); }
		public TerminalNode RPAREN() { return getToken(HTMLParser.RPAREN, 0); }
		public List<ComponentBodyContext> componentBody() {
			return getRuleContexts(ComponentBodyContext.class);
		}
		public ComponentBodyContext componentBody(int i) {
			return getRuleContext(ComponentBodyContext.class,i);
		}
		public ComponentDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterComponentDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitComponentDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitComponentDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentDeclarationContext componentDeclaration() throws RecognitionException {
		ComponentDeclarationContext _localctx = new ComponentDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_componentDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(DECORATOR);
			setState(131);
			match(COMPONENT);
			setState(132);
			match(LPAREN);
			setState(133);
			match(LBRACE);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2251799813717504L) != 0)) {
				{
				{
				setState(134);
				componentBody();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(140);
			match(RBRACE);
			setState(141);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
